SET part2, author

--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -1039,6 +1039,16 @@ D < \epsilon \ frac{6 + \frac{1}{8}}{14} < \frac{2}{3} \epsilon
 \end{equation} 
 
 При $\delta <0$ получаем $K(\epsilon) < T(\delta, \epsilon) < 1$ 
+
+\section{Оценка частоты энергосистемы с использованием дифференциатора наименьших средних квадратов} \label{sec:ch2/sec6}
+
+Частота энергосистемы является решающим фактором для мониторинга и контроля рабочего состояния сети, а также для синхронизации и управления электронными преобразователями мощности, подключенными к ней. Некоторые методы синхронизации, используемые в преобразователях мощности, подключенных к сети, основаны на точной оценке частоты сети. 
+\cite{lee2013novel, lee2011active}. Несколько методов было разработано для получения частоты электросети, как описано в \cite{chen2013comparative}. На основе DFT \cite{borkowski2014interpolated,kamwa2004performance}, искусственная нейронная сеть \cite{jiang2014frequency}, частотно-замкнутый контур (FLL) \cite{fedele2014frequency}, широколинейная фаза наименьшего среднего значения (WLLMP) \cite{xia2014widely}, наименьшие квадраты (LS) \cite{kuvsljevic2013ls}, Комплексные наименьшие средние квадраты \cite{pradhan2005power, xia2014complex} наименьшие квадраты, примененные к фазовому углу \cite{ramos2015frequency}, улучшенный алгоритм рекурсивного ньютоновского типа (IRNTA) \cite{ray2015improved}, фильтр Калмана \cite{routray2002novel}, Prony \cite{rubeena2014accurate}, улучшенная фазовая автоподстройка частоты (EPLL) ) \cite{karimi2010application}, фаза кадра синхронной автоподстройки частоты (ОСР-ФАПЧ) \cite{golestan2013performance}, и переход через нуль \cite{ramos2005synchronizing} среди доступных методов оценки частоты.
+Точность оценки частоты сильно зависит от помех в энергосистеме. Нарушения могут быть разделены на две основные группы: стационарное состояние и переходные процессы. Проблемы установившегося состояния включают несбалансированные напряжения, гармоники, низкочастотные колебания амплитуды и отклонения частоты. Временные проблемы включают в себя внезапные изменения основной формы волны напряжения и амплитуд и фаз гармоник, изменения частоты, скачки фазового угла, пики, вырезы, экспоненциальные затухающие компоненты и шум. Поскольку возмущения энергосистемы увеличиваются с распространением систем распределенной генерации и нелинейных нагрузок, крайне важно, чтобы алгоритм оценки частоты был невосприимчив к помехам. Одновременно алгоритм должен иметь достаточную пропускную способность для отслеживания изменений частоты. Компромисс между шириной полосы и отклонением помех является общим свойством для всех методов оценки частоты.
+В этой статье предлагается метод оценки частоты, основанный на дифференцировании фазового угла комплексной синусоиды, полученной путем применения матрицы преобразования Кларка к напряжениям сетки. Насколько известно авторам, первые случаи использования фазовых углов для получения частоты сложной синусоиды были описаны Треттером \cite{tretter1985estimating} и Кейем \cite{kay1989fast}. МакКиллиам \cite{mckilliam2010frequency} предложил версию, более устойчивую к шуму за счет времени вычислений. Идея в \cite{tretter1985estimating} состоит в том, чтобы использовать метод наименьших квадратов (LSM), чтобы развернуть развернутый фазовый угол в прямую линию, где наклон указывает частоту. Таким образом, частота задается первой производной фаTзового угла. Таким образом, \cite{tretter1985estimating} дает те же результаты, что и применение фильтра Савицкого – Голея первого порядка \cite{schafer2011savitzky} к фазовым углам. Версия Kay \cite{kay1989fast} улучшает оценку, избегая шага разворачивания фазового угла, используя разности фазного угла назад. Другое тонкое улучшение заключается в том, что в версии Kay нет ограничения на то, что количество выборок должно быть нечетным. Вклад этой статьи: добавление фильтра скользящего среднего (MAF) для дальнейшего сглаживания оценки частоты и обеспечения полной оценки устойчивости оценщика к гармоникам напряжения и дисбалансам; разработка метода выбора количества выборок, используемых алгоритмом LMS; рекурсивная реализация алгоритма LMS.
+
+
+
  
 %\chapter{Длинное название главы, в которой мы смотрим на~примеры того, как будут верстаться изображения и~списки}\label{ch:ch2}
 %
