--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -690,4 +690,279 @@
   urldate = {2020-01-10},
 }
 
+@Article{lee2013novel,
+  author    = {Lee, Kyoung-Jun and Lee, Jong-Pil and Shin, Dongsul and Yoo, Dong-Wook and Kim, Hee-Je},
+  title     = {A novel grid synchronization {PLL} method based on adaptive low-pass notch filter for grid-connected {PCS}},
+  journal   = {IEEE transactions on industrial electronics},
+  year      = {2013},
+  volume    = {61},
+  number    = {1},
+  pages     = {292--301},
+  publisher = {IEEE},
+  url       = {Lee K-J, Lee J-P, Shin D, Yoo D-W, Kim H-J. A novel grid synchronization PLL method based on adaptive low-pass notch filter for grid-connected PCS. IEEE Trans Ind Electron 2014;61(1):292–301.},
+}
+
+@Article{lee2011active,
+  author    = {Lee, Jong-Pil and Min, Byung-Duk and Kim, Tae-Jin and Yoo, Dong-Wook and Yoo, Ji-Yoon},
+  title     = {Active frequency with a positive feedback anti-islanding method based on a robust PLL algorithm for grid-connected PV PCS},
+  journal   = {Journal of Power Electronics},
+  year      = {2011},
+  volume    = {11},
+  number    = {3},
+  pages     = {360--368},
+  doi       = {10.6113/JPE.2011.11.3.360},
+  publisher = {The Korean Institute of Power Electronics},
+  url       = {http://ocean.kisti.re.kr/downfile/volume/kipe/E1PWAX/2011/v11n3/E1PWAX_2011_v11n3_360.pdf},
+}
+
+@Article{chen2013comparative,
+  author    = {Chen, Cheng-I and Chen, Yeong-Chin},
+  title     = {Comparative study of harmonic and interharmonic estimation methods for stationary and time-varying signals},
+  journal   = {IEEE Transactions on Industrial Electronics},
+  year      = {2013},
+  volume    = {61},
+  number    = {1},
+  pages     = {397--404},
+  doi       = {10.1109/TIE.2013.2242419},
+  publisher = {IEEE},
+  url       = {https://ieeexplore.ieee.org/abstract/document/6419811},
+}
+
+@Article{borkowski2014interpolated,
+  author    = {Borkowski, J{\'o}zef and Kania, Dariusz and Mroczka, Janusz},
+  title     = {Interpolated-DFT-based fast and accurate frequency estimation for the control of power},
+  journal   = {IEEE Transactions on industrial Electronics},
+  year      = {2014},
+  volume    = {61},
+  number    = {12},
+  pages     = {7026--7034},
+  doi       = {10.1109/TIE.2014.2316225},
+  publisher = {IEEE},
+  url       = {https://www.researchgate.net/profile/D_Kania/publication/265645636_Interpolated-DFT-Based_Fast_and_Accurate_Frequency_Estimation_for_the_Control_of_Power/links/57e90afe08aef8bfcc95eca8.pdf},
+}
+
+@Article{kamwa2004performance,
+  author    = {Kamwa, Innocent and Leclerc, Michel and McNabb, Danielle},
+  title     = {Performance of demodulation-based frequency measurement algorithms used in typical PMUs},
+  journal   = {IEEE transactions on power delivery},
+  year      = {2004},
+  volume    = {19},
+  number    = {2},
+  pages     = {505--514},
+  doi       = {10.1109/TPWRD.2004.823185},
+  publisher = {IEEE},
+  url       = {https://s3.amazonaws.com/academia.edu.documents/43392620/Performance_of_Demodulation-Based_Freque20160305-5408-ecjgy7.pdf?response-content-disposition=inline%3B%20filename%3DPerformance_of_Demodulation-Based_Freque.pdf&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWOWYYGZ2Y53UL3A%2F20200218%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20200218T050753Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&X-Amz-Signature=113b4c8f2a04e3d095a4dc24d0a8378a2b60a83ce9f6fb64f0a5ac3b18724d23},
+}
+
+@Article{jiang2014frequency,
+  author    = {Jiang, Wang and Lu, Jiping},
+  title     = {Frequency estimation in wind farm integrated systems using artificial neural network},
+  journal   = {International Journal of Electrical Power \& Energy Systems},
+  year      = {2014},
+  volume    = {62},
+  pages     = {72--79},
+  doi       = {10.1016/j.ijepes.2014.04.027},
+  publisher = {Elsevier},
+  url       = {https://www.sciencedirect.com/science/article/abs/pii/S014206151400221X},
+}
+
+@Article{fedele2014frequency,
+  author    = {Fedele, Giuseppe and Ferrise, Andrea},
+  title     = {A frequency-locked-loop filter for biased multi-sinusoidal estimation},
+  journal   = {IEEE Transactions on Signal Processing},
+  year      = {2014},
+  volume    = {62},
+  number    = {5},
+  pages     = {1125--1134},
+  doi       = {10.1109/TSP.2014.2300057},
+  publisher = {IEEE},
+  url       = {https://ieeexplore.ieee.org/abstract/document/6712157},
+}
+
+@Article{xia2014widely,
+  author    = {Xia, Yili and Mandic, Danilo P},
+  title     = {A widely linear least mean phase algorithm for adaptive frequency estimation of unbalanced power systems},
+  journal   = {International Journal of Electrical Power \& Energy Systems},
+  year      = {2014},
+  volume    = {54},
+  pages     = {367--375},
+  doi       = {10.1016/j.ijepes.2013.07.030},
+  publisher = {Elsevier},
+  url       = {https://www.sciencedirect.com/science/article/abs/pii/S014206151300327X},
+}
+
+@Article{kuvsljevic2013ls,
+  author    = {Ku{\v{s}}ljevi{\'c}, Miodrag D},
+  title     = {On LS-based power frequency estimation algorithms},
+  journal   = {IEEE Transactions on Instrumentation and Measurement},
+  year      = {2013},
+  volume    = {62},
+  number    = {7},
+  pages     = {2020--2028},
+  publisher = {IEEE} # url,
+}
+
+@Article{pradhan2005power,
+  author    = {Pradhan, AK and Routray, A and Basak, Abir},
+  title     = {Power system frequency estimation using least mean square technique},
+  journal   = {IEEE transactions on power delivery},
+  year      = {2005},
+  volume    = {20},
+  number    = {3},
+  pages     = {1812--1816},
+  publisher = {IEEE} # url,
+}
+
+@Article{xia2014complex,
+  author    = {Xia, Yili and Blazic, Zoran and Mandic, Danilo P},
+  title     = {Complex-valued least squares frequency estimation for unbalanced power systems},
+  journal   = {IEEE Transactions on Instrumentation and Measurement},
+  year      = {2014},
+  volume    = {64},
+  number    = {3},
+  pages     = {638--648},
+  publisher = {IEEE} # url,
+}
+
+@Article{ramos2015frequency,
+  author    = {Ramos, Carlos Jo{\~a}o and Martins, Ant{\'o}nio P and Carvalho, Adriano S},
+  title     = {Frequency and phase-angle estimation using ordinary least squares},
+  journal   = {IEEE Transactions on Industrial Electronics},
+  year      = {2015},
+  volume    = {62},
+  number    = {9},
+  pages     = {5677--5688},
+  publisher = {IEEE} # url,
+}
+
+@Article{ray2015improved,
+  author    = {Ray, Pravat Kumar and Puhan, Pratap Sekhar and Panda, Gayadhar},
+  title     = {Improved Recursive Newton Type Algorithm based power system frequency estimation},
+  journal   = {International Journal of Electrical Power \& Energy Systems},
+  year      = {2015},
+  volume    = {65},
+  pages     = {231--237},
+  publisher = {Elsevier},
+  url       = {https://www.sciencedirect.com/science/article/abs/pii/S0142061514006206},
+}
+
+@Article{routray2002novel,
+  author    = {Routray, Aurobinda and Pradhan, Ashok Kumar and Rao, K Prahallad},
+  title     = {A novel Kalman filter for frequency estimation of distorted signals in power systems},
+  journal   = {IEEE Transactions on Instrumentation and Measurement},
+  year      = {2002},
+  volume    = {51},
+  number    = {3},
+  pages     = {469--479},
+  doi       = {10.1109/TIM.2002.1017717},
+  publisher = {IEEE},
+  url       = {https://ieeexplore.ieee.org/abstract/document/1017717},
+}
+
+@Article{rubeena2014accurate,
+  author    = {Rubeena, Rubeena and Zadeh, Mohammad R Dadash and Bains, Tirath Pal S},
+  title     = {An accurate offline phasor estimation for fault location in series-compensated lines},
+  journal   = {IEEE transactions on power delivery},
+  year      = {2014},
+  volume    = {29},
+  number    = {2},
+  pages     = {876--883},
+  doi       = {10.1109/TPWRD.2013.2283454},
+  publisher = {IEEE},
+  url       = {https://ieeexplore.ieee.org/abstract/document/6704849},
+}
+
+@Article{karimi2010application,
+  author    = {Karimi-Ghartemani, Masoud and Ooi, Boon-Teck and Bakhshai, Alireza},
+  title     = {Application of enhanced phase-locked loop system to the computation of synchrophasors},
+  journal   = {IEEE Transactions on Power Delivery},
+  year      = {2010},
+  volume    = {26},
+  number    = {1},
+  pages     = {22--32},
+  doi       = {10.1109/TPWRD.2010.2064341},
+  publisher = {IEEE},
+  url       = {https://ieeexplore.ieee.org/abstract/document/5575433},
+}
+
+@Article{golestan2013performance,
+  author    = {Golestan, Saeed and Monfared, Mohammad and Freijedo, Francisco D and Guerrero, Josep M},
+  title     = {Performance improvement of a prefiltered synchronous-reference-frame PLL by using a PID-type loop filter},
+  journal   = {IEEE Transactions on Industrial Electronics},
+  year      = {2013},
+  volume    = {61},
+  number    = {7},
+  pages     = {3469--3479},
+  doi       = {10.1109/TIE.2013.2282607},
+  publisher = {IEEE},
+  url       = {https://ieeexplore.ieee.org/abstract/document/6603275},
+}
+
+@InProceedings{ramos2005synchronizing,
+  author    = {Ramos, Carlos and Martins, A and Carvalho, Adriano},
+  title     = {Synchronizing renewable energy sources in distributed generation systems},
+  booktitle = {Proc. Int. Conf. Renew. Energy Power Qual.(ICREPQ), Zaragoza, Spain},
+  year      = {2005},
+  pages     = {1--5},
+  url       = {https://s3.amazonaws.com/academia.edu.documents/50836075/Synchronizing_Renewable_Energy_Sources_i20161211-14554-1antncf.pdf?response-content-disposition=inline%3B%20filename%3DSynchronizing_Renewable_Energy_Sources_i.pdf&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWOWYYGZ2Y53UL3A%2F20200218%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20200218T071022Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&X-Amz-Signature=38f244e8a5b914bbb46aeec93d02734c0ed5147a0c5ca4fd67863216d20501f1},
+}
+
+@Article{tretter1985estimating,
+  author    = {Tretter, Steve},
+  title     = {Estimating the frequency of a noisy sinusoid by linear regression (Corresp.)},
+  journal   = {IEEE Transactions on Information theory},
+  year      = {1985},
+  volume    = {31},
+  number    = {6},
+  pages     = {832--835},
+  doi       = {10.1109/TIT.1985.1057115},
+  publisher = {IEEE},
+  url       = {https://ieeexplore.ieee.org/abstract/document/1057115},
+}
+
+@Article{kay1989fast,
+  author    = {Kay, Steven},
+  title     = {A fast and accurate single frequency estimator},
+  journal   = {IEEE Transactions on Acoustics, Speech, and Signal Processing},
+  year      = {1989},
+  volume    = {37},
+  number    = {12},
+  pages     = {1987--1990},
+  publisher = {IEEE},
+  url       = {10.1109/29.45547},
+}
+
+@Article{mckilliam2010frequency,
+  author    = {McKilliam, Robby G and Quinn, Barry G and Clarkson, I Vaughan L and Moran, Bill},
+  title     = {Frequency estimation by phase unwrapping},
+  journal   = {IEEE transactions on signal processing},
+  year      = {2010},
+  volume    = {58},
+  number    = {6},
+  pages     = {2953--2963},
+  doi       = {10.1109/TSP.2010.2045786},
+  publisher = {IEEE},
+  url       = {https://ieeexplore.ieee.org/abstract/document/5431026},
+}
+
+@Article{schafer2011savitzky,
+  author    = {Schafer, Ronald W},
+  title     = {What is a Savitzky-Golay filter?[lecture notes]},
+  journal   = {IEEE Signal processing magazine},
+  year      = {2011},
+  volume    = {28},
+  number    = {4},
+  pages     = {111--117},
+  doi       = {10.1109/MSP.2011.941097},
+  publisher = {IEEE},
+  url       = {https://ieeexplore.ieee.org/abstract/document/5888646},
+}
+
+@Article{de1999voltage,
+  author  = {De Tandt, B},
+  title   = {Voltage characteristics of electricity supplied by public distribution systems},
+  journal = {European Committee for Electrotechnical Standardization (CENELEC)},
+  year    = {1999},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
