SET part2, images

--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -1047,9 +1047,167 @@ D < \epsilon \ frac{6 + \frac{1}{8}}{14} < \frac{2}{3} \epsilon
 Точность оценки частоты сильно зависит от помех в энергосистеме. Нарушения могут быть разделены на две основные группы: стационарное состояние и переходные процессы. Проблемы установившегося состояния включают несбалансированные напряжения, гармоники, низкочастотные колебания амплитуды и отклонения частоты. Временные проблемы включают в себя внезапные изменения основной формы волны напряжения и амплитуд и фаз гармоник, изменения частоты, скачки фазового угла, пики, вырезы, экспоненциальные затухающие компоненты и шум. Поскольку возмущения энергосистемы увеличиваются с распространением систем распределенной генерации и нелинейных нагрузок, крайне важно, чтобы алгоритм оценки частоты был невосприимчив к помехам. Одновременно алгоритм должен иметь достаточную пропускную способность для отслеживания изменений частоты. Компромисс между шириной полосы и отклонением помех является общим свойством для всех методов оценки частоты.
 В этой статье предлагается метод оценки частоты, основанный на дифференцировании фазового угла комплексной синусоиды, полученной путем применения матрицы преобразования Кларка к напряжениям сетки. Насколько известно авторам, первые случаи использования фазовых углов для получения частоты сложной синусоиды были описаны Треттером \cite{tretter1985estimating} и Кейем \cite{kay1989fast}. МакКиллиам \cite{mckilliam2010frequency} предложил версию, более устойчивую к шуму за счет времени вычислений. Идея в \cite{tretter1985estimating} состоит в том, чтобы использовать метод наименьших квадратов (LSM), чтобы развернуть развернутый фазовый угол в прямую линию, где наклон указывает частоту. Таким образом, частота задается первой производной фаTзового угла. Таким образом, \cite{tretter1985estimating} дает те же результаты, что и применение фильтра Савицкого – Голея первого порядка \cite{schafer2011savitzky} к фазовым углам. Версия Kay \cite{kay1989fast} улучшает оценку, избегая шага разворачивания фазового угла, используя разности фазного угла назад. Другое тонкое улучшение заключается в том, что в версии Kay нет ограничения на то, что количество выборок должно быть нечетным. Вклад этой статьи: добавление фильтра скользящего среднего (MAF) для дальнейшего сглаживания оценки частоты и обеспечения полной оценки устойчивости оценщика к гармоникам напряжения и дисбалансам; разработка метода выбора количества выборок, используемых алгоритмом LMS; рекурсивная реализация алгоритма LMS.
 
+\subsection{Оценка частоты сетки с использованием фазовых углов и алгоритма LMS} \label{sec:ch2/sec1_1}
 
+Используя преобразование Кларка, сеточные напряжения выражаются в стационарном $\alpha \beta$ -- кадре :
 
+\begin{equation}
+\label{eq:equation113}
+[u_{\alpha}[n],u_{\beta}[n]]^T=\dfrac{\sqrt{2}}{2\sqrt{3}} 
+\begin{bmatrix}
+2 & -1 & -1\\
+0 & \sqrt{3} & -\sqrt{3}
+\end{bmatrix}
+[u_1[n], u_2[n], u_3[n]]^T ,
+\end{equation} 
+
+где $u_1[n], u_2[n]$  и  $u_3[n]$ представляют текущую выборку трех фазно-нейтральных напряжений сетки, выбранных на частоте $f_s$  и периоде $T_s$.
+Затем компоненты $u_{\alpha}[n] , u_{\beta}[n]$ используются для формирования сложной синусоиды $u_c[n]$:
  
+\begin{equation}\label{eq:equation114}
+u_c [n]= u_{\alpha}[n]+j* u_{\beta}[n] ,
+\end{equation}
+
+который также может быть представлен в полярной форме:
+
+\begin{equation}\label{eq:equation115}
+u_c [n]= a[n]exp(j\theta [n] ),
+\end{equation}
+
+где фазовый угол $\theta [n]$ получается выражением:
+
+\begin{equation}\label{eq:equation116}
+\theta[n]=atan (u_{\beta} [n],u_{\alpha}[n] ),
+\end{equation}
+
+и $ atan(y,x)$  функция представляет угол четырех квадрантов из функции $tan^{-1} \dfrac{x}{y}$
+
+В незагрязненной сетке текущее значение фазового угла, определяемое как (4), равно фазовому углу основной положительной последовательности $(\theta^{1+})$, и текущая частота сетки        $(f_g [n])$ получается из разности между текущей и последней выборками фазового угла:
+
+\begin{equation}\label{eq:equation117}
+f_{g} [n]=(\theta[n]- \theta[n-1] ) f_{s} /(2\pi)
+\end{equation}
+
+В общей сетке, нарушенной гармониками, дисбалансами и шумом, фазовый угол $\theta$ является основным фазовым углом прямой последовательности $\theta ^{1+}$, на который накладывается фазовый угол ошибки. Значения $\theta ^{1+}$,  можно оценить, поместив развернутую последовательность $N$ элементов  $\theta`$ из значений $\theta$ в прямую линию. Расчетная частота сетки затем получается по наклону линии подгонки. Если метод наименьших квадратов используется для подгонки развернутых значений $\theta`$, текущий оцененный фазовый угол прямой последовательности $\theta ^{1+} [n]$  и текущая расчетная частота  $f_{g} [n] $  определяются как \cite{tretter1985estimating, kay1989fast}:
+
+\begin{equation}\label{eq:equation118}
+\hat{\theta}^{1+}[n] = \dfrac{6}{N(N+1)} \sum\limits_{i=0}^{N-1} i \theta^\prime[n+i-N+1]-\dfrac{2N-4}{N(N+1)} \sum\limits_{i=0}^{N-1} \theta^\prime[n+i-N+1]
+\end{equation}
+
+\begin{equation}\label{eq:equation119}
+\hat f_{g}[n] = \dfrac{6f_{s}}{N(N^{2}+1)\pi} \sum\limits_{i=0}^{N-1} i \theta^\prime[n+i-N+1]-\dfrac{3f_{s}}{N(N+1\pi)} \sum\limits_{i=0}^{N-1} \theta^\prime[n+i-N+1]
+\end{equation}
+
+Последовательность $\theta^\prime [n+i-N+1], i = {0,1,…,N-1}$ получается путем развертывания последовательности $h$ фазового угла, образованной текущим значением $(i=0)$ и $N-1$ прошлыми элементами.
+
+Чтобы избежать трудоемкой операции развертывания фазового угла, оценка частоты сетки 
+\^f$_{g}$ может быть выражена в функции обратной разности $(\theta)$ фазового угла $(\delta)$, определяемой как:
+
+\begin{equation}\label{eq:equation120}
+\delta[n]  =
+\begin{cases}
+\theta[n]-\theta[n-1]-2\pi, &\text{если $\theta[n]-\theta[n-1] >\pi$} \\
+\theta[n]-\theta[n-1], &\text{если $ -\pi<\theta[n]-\theta[n-1] \leqslant \pi$} \\
+\theta[n]-\theta[n-1]+2\pi, &\text{если $\theta[n]-\theta[n-1] \leqslant -\pi$} 
+\end{cases}
+\end{equation}
+
+\begin{figure}[ht]
+	\centering
+	%\includegraphics [scale=0.9] {f1.png}
+	\includegraphics [width=0.9\linewidth] {f1.png}
+	\caption{Оценщик (9) веса и амплитуды частотной характеристики образца.}
+	\label{img:picture15}
+\end{figure}
+
+Три случая для вычисления $\delta$ необходимы для учета циклического характера фазового угла. Это позволяет избежать абсолютных разностей фазового угла, превышающих $\pi$ радиан.
+
+Используя \labelcref{eq:equation120}, оценка частоты сетки \labelcref{eq:equation119} выражается как:
+
+\begin{equation}\label{eq:equation121}
+\hat f_{g}[n] = \sum\limits_{i=0}^{N+2} \dfrac{3f_{s}}{4\pi} 
+\dfrac{N^2-4(i-\dfrac{1}{2}N +1)^{2}} {N(N^2 -1)} \delta[n-i] = \sum\limits_{i=0}^{N+2} f_s w [-i]\delta [n-i]
+\end{equation}
+
+где $w[-i]$ представляет вес выборки окна, примененный к каждой разности фаз и углов, задержанной на $i$ выборок$ (\delta [n - 1])$:
+
+\begin{equation}\label{eq:equation122}
+w[-i] =\dfrac{3}{4\pi} \dfrac{N^2-4(i-\dfrac{1}{2}N +1)^{2}} {N(N^2 -1)}, i=2-N, ..., -1, 0
+\end{equation}
+
+На \labelcref{img:picture15}  показан вес выборки окна \labelcref{eq:equation122} и частотная характеристика выражения \labelcref{eq:equation121} для четырех значений $ N $. Без потери общности и по соображениям ясности был выбран диапазон небольших значений $ N $. Частоты $ f_1, f_2 и f_3 $ являются частотами, для которых частотная характеристика имеет нулевое усиление для $ N = 9 $.
+
+Как уже упоминалось в \cite{kay1989fast}, \labelcref{eq:equation121} достигает Крамера-Рао для сигнала к шуму (SNR) больше, чем на 6 дБ. Это означает, что этот оценщик будет иметь лучшее подавление шума для SNR более 6 дБ. Однако этот оценщик не может полностью отклонить содержание гармоник сетки, потому что нет значения N, которое приводит к нулевому усилению на всех частотах $ f=hf_g $, где $  h $ - порядок гармоник.
+
+\subsection{Фильтрация оценки частоты с помощью фильтра скользящих средних} \label{sec:ch2/sec1_2}
+
+В общей сетке, нарушенной гармониками и дисбалансами, выражение фазового угла $ \theta $ не имеет простой замкнутой формы, как в \labelcref{eq:equation116}. Тем не менее, следующие свойства подтверждаются численным моделированием: компонент постоянного тока создает колебание фазового угла с той же частотой, что и сетка; положительная последовательность гармоники n-го порядка дает осцилляцию ошибки фазового угла $ (n - 1) $, умноженную на частоту сетки; отрицательная последовательность гармоники n-го порядка создает осцилляцию ошибки фазового угла $ (n + 1) $, умноженную на частоту сетки; значение ошибки фазового угла в течение периода сетки равно нулю. На \labelcref{img:picture16} показаны четыре примера с различными условиями сетки, где $  \theta^{1+} $- это фазовый угол основной прямой последовательности, а $ \theta $- фазовый угол, полученный из \labelcref{eq:equation116}.
+
+Фильтр скользящего среднего, применяемый к оценке частоты LMS $ ({\hat{f}}_g) $, может полностью устранить ошибки частоты из-за гармоник и дисбалансов, если длина фильтра совпадает с периодом сетки. Это происходит потому, что фильтр MAF определяется:
+
+\begin{equation}\label{eq:equation123}
+y[n] =\dfrac{1}{N} \sum\limits_{i=0}^{N-1} x [n-i]
+\end{equation}
+
+\begin{figure}[ht]
+	\centering
+	%\includegraphics [scale=0.9] {f1.png}
+	\includegraphics [width=0.9\linewidth] {f2.png}
+	\caption{Примеры фазового угла с несколькими устойчивыми состояниями сетки: (а) незагрязненный; (б) загрязнены постоянным током; (в) загрязнены положительной последовательностью 5-й гармоники и (е) загрязнены отрицательной последовательностью 5-й гармоники.}
+	\label{img:picture16}
+\end{figure}
+
+Имеет частотную характеристику с нулевой величиной в частотах, кратных обратному временному окну, то есть все сигналы в форме:
+
+\begin{equation}\label{eq:equation124}
+x[n]=a cos{(2\pi / Nkn+1)}
+\end{equation}
+
+(где $ a$ и $b $ являются действительными числами; $  N, k$ и $ n $ являются целыми числами), становятся нулевыми после фильтрации по MAF длиной N точек (y [n] = 0).
+
+Таким образом, число отсчетов MAF задается как $ N=f_s / f_g $, но это выражение действительно только тогда, когда $ f_s / f_g $ является целым числом. Поскольку в общем случае это не будет так, число выборок MAF должно быть округлено до ближайшего целого числа:
+
+\begin{equation}\label{eq:equation125}
+N=round(f_s / f_g)
+\end{equation}
+
+Однако это означает, что частотная характеристика фильтра MAF на частотах гармоник сетки больше не равна нулю, а имеет значение, которое уменьшается с увеличением $ N $, т.~е. чем больше частота дискретизации, тем меньше усиление MAF на этих частотах. На \labelcref{img:picture17} показана частотная характеристика MAF с длиной $ N = 10 $. Как и ожидалось, усиление на частоте сетки             $ f_g({0.1f}_s) $ и ее гармоники $ ({0.2f}_s,\ {0.3f}_sи {0.4f}_s) $ равны нулю. С $ N $, наложенным (13), $ |H_{MAF}| $ график действителен только для частот сетки между $ f_{g_{min}} = f_s /\ (N+0.5) $ и $ f_{g_{max}} = f_s /\ (N-0.5) $. Если $ f_g<f_{g_{min}}$ $N$ увеличивается на 1 и если $ f_g> f_{g_{max}} $ N уменьшается на 1. Таким образом, максимум $ |H_{MAF}| $ усиления происходят на частотах $ kf_{g_{min}} $ и $ {kf}_{g_{max}}$ для $ k=\left\{\ 1,\ 2,\ \ldots,\ int\left(N\ /\ 2\right)\right\} $.
+
+Следует отметить, что можно сделать $ f_s/\ f_g $ целым числом, если можно изменить частоту дискретизации. Однако предложенный оценщик частоты был разработан для управления силовыми электронными преобразователями, которые работают с фиксированной частотой PWM. Поскольку частота дискретизации связана с PWM, изменить ее невозможно.
+
+\begin{figure}[ht]
+	\centering
+	%\includegraphics [scale=0.9] {f1.png}
+	\includegraphics [width=0.9\linewidth] {f3.png}
+	\caption{Частотная характеристика фильтра скользящего среднего с длиной N=10.}
+	\label{img:picture17}
+\end{figure}
+
+\subsection{Предлагаемый метод оценки частоты сетки} \label{sec:ch2/sec1_3}
+Предлагаемое ядро оценщика состоит из фильтра MAF \labelcref{eq:equation123}, применяемого к выходу оценщика LMS \labelcref{eq:equation121}. Чтобы дать оценщику возможность работать с широкой сеткой вариаций частоты, количество выборок \labelcref{eq:equation121} и \labelcref{eq:equation123} должно быть переменным. Используя изменяющееся во времени количество выборок \labelcref{eq:equation121} и \labelcref{eq:equation123} переписываются соответственно как:
+
+\begin{equation}\label{eq:equation126}
+f\prime_g[n]= \sum\limits_{i=0}^{N_a[n]-2} \dfrac{3f_s}{4\pi} \dfrac{N_a[n]^2-4(i-\dfrac{1}{2} N_a[n]+1)^2}{N_a[n](N_a[n]^2-1)} \delta [n-i]
+\end{equation}
+
+\begin{equation}\label{eq:equation127}
+\hat{f}_g[n] =\dfrac{1}{N_b[n]}  \sum\limits_{i=0}^{N_a[n]-1} f^\prime_g[n-1]
+\end{equation}
+
+где 
+
+\begin{equation}\label{eq:equation128}
+N_a[n] = round(k_{LMS} f_s / \hat{f}_g[n-1])
+\end{equation}
+
+и
+
+\begin{equation}\label{eq:equation129}
+N_b[n] = round(k_{MAF} f_s / \hat{f}_g[n-1])
+\end{equation}
+
+
+
 %\chapter{Длинное название главы, в которой мы смотрим на~примеры того, как будут верстаться изображения и~списки}\label{ch:ch2}
 %
 %\section{Одиночное изображение}\label{sec:ch2/sec1}
